# CxxProjectTemplate

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hello/: CMakeLists.txt  main.cpp
include/: Circle.hpp  Rectangle.hpp  Shape.hpp
src/: CMakeLists.txt  Circle.cpp  Rectangle.cpp  Shape.cpp
test/: CMakeLists.txt  Circle.cpp  Rectangle.cpp  Shape.cpp
